--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,8 @@
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	height: 70vh;
+	height: 60vh;
+	padding-left: 15px;
 
 }
 
@@ -25,7 +26,7 @@
 
 #logo {
    display: flex;
-   padding-bottom: 50px;
+   padding-bottom: 60px;
    height: 97;
    width: 272;
 
