--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,13 @@
 
 body {
 	font-family: arial,sans-serif; 
+	font-size: 13px;
+}
+
+#hyperlink {
+	position: absolute;
+	display: inline-block;
+	margin: 7px 0 0 10px;
 }
 
 .centerbox {
@@ -18,7 +25,8 @@ body {
 	align-items: center;
 	flex-direction: column;
 	height: 60vh;
-	padding-left: 15px;
+	margin-top: 50px;
+	margin-left: 25px;
 
 }
 
@@ -81,3 +89,4 @@ body {
 	font-family: arial,sans-serif; 
 
 }
+
