Positioned and styled About/Store hyperlinks

--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,32 @@ body {
 	font-size: 13px;
 }
 
-#hyperlink {
+.hyperlink {
 	position: absolute;
 	display: inline-block;
 	margin: 7px 0 0 10px;
+	padding-left: 2em;
+}
+
+a {
+	text-decoration: none;
+}
+
+#about-a {
+	display: inline-block;
+	padding-left: 15px;
+	padding-top: 15px;
+	color: #000;
+	opacity: 0.75;
+
+}
+
+#store-a {
+	display: inline-block;
+	padding-left: 15px;
+	padding-top: 15px;
+	color: #000;
+	opacity: 0.75;
 }
 
 .centerbox {
