--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,44 @@ a {
 	opacity: 0.75;
 }
 
+#gmail-a {
+	display: inline-block;
+	padding-left: 15px;
+	padding-top: 15px;
+	color: #000;
+	opacity: 0.75;
+}
+
+#images-a {
+	display: inline-block;
+	padding-left: 15px;
+	padding-top: 15px;
+	color: #000;
+	opacity: 0.75;
+}
+
+.toprightbar {
+	display: inline-flex;
+	float: right;
+	padding-left: 30px;
+	padding-right: 30px;
+	position: relative;
+	flex-direction: row;
+}
+
+#gmail {
+	display: inline-block;
+	line-height: 45px;
+	margin-right: 30px;
+
+}
+
+#images {
+	display: inline-block;
+	line-height: 45px;
+
+}
+
 .centerbox {
 	display: -webkit-box;
 	display: -webkit-flex;
@@ -123,4 +161,5 @@ a {
 	border: 1px solid #c6c6c6;
 	color: #222
 }
+
 
