--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,7 @@ a {
 	min-width: 54px;
 	margin: 25px 90px;
 	padding-left: 16px;
+	padding-right: 16px;
 	font-size: 14px;
 	font-family: arial,sans-serif; 
 }
@@ -150,6 +151,7 @@ a {
 	min-width: 54px;
 	margin: 25px 235px;
 	padding-left: 16px;
+	padding-right: 16px;
 	font-size: 14px;
 	font-family: arial,sans-serif; 
 
@@ -162,4 +164,27 @@ a {
 	color: #222
 }
 
+.footer {
+	display: inline-block;
+	bottom: 0;
+	position: fixed;
+	height: 60px;
+	width: 100%;
+	background-color: #f2f2f2;
+}
 
+
+.footbar {
+	display: content-box;
+	width: 100%;
+	line-height: 47px;
+	border-bottom: solid 1px #e4e4e4;
+}
+
+.langbar {
+	line-height: 45px;
+	font-size: 15px;
+	opacity: 0.75;
+	font-color: #0000008a;
+	
+}
